# animation-toolkit

./: CMakeLists.txt
assignments/: CMakeLists.txt
assignments/a0-start/: Readme.md  sphere2d.cpp  sphere3d.cpp
assignments/a1-hello/: Readme.md  circles.cpp  eyes.cpp  look.cpp  particles.cpp  unique.cpp
assignments/a10-ik/: CMakeLists.txt  Readme.md  dancer.cpp  ik_controller.cpp  looker.cpp  unique.cpp
assignments/a11-steering/: Readme.md  behaviors-basecode.cpp  behaviorviewer.cpp  steerable-basecode.cpp
assignments/a2-interpolation/: Readme.md  drawcurve.cpp  gradient.cpp  particlecubic.cpp  screensaver.cpp  unique.cpp
assignments/a3-splines/: Readme.md  curve_editor.cpp  interpolator_catmullrom.h  interpolator_hermite.h  interpolator_linear.h  spline.cpp  test_hermite.cpp  test_spline.cpp  unique.cpp
assignments/a4-euler/: Readme.md  unique.cpp
assignments/a5-quat/: Readme.md  test_quat.cpp  test_quat_mat.cpp  unique.cpp
assignments/a6-transform/: Readme.md  boxes.cpp  skeleton_practice.cpp  tentacle.cpp  unique.cpp
assignments/a7-motion/: Readme.md  butterfly.cpp  motion_practice.cpp  motion_viewer.cpp  squirrel.cpp  thriller.cpp  unique.cpp
assignments/a8-blend/: Readme.md  blend.cpp  reorient.cpp  splice.cpp  unique.cpp  zombie_arms.cpp
assignments/a9-fade/: Readme.md  controller.cpp  crossfade.cpp  twolink.cpp  unique.cpp
assignments/gltf/: AGLTFGeometry.cpp  AGLTFGeometry.h  AGLTFHand-Fixed.cpp  AGLTFHand.cpp  AGLTFHandDLB.cpp  AGLTFHandLB-Fixed.cpp  AGLTFHandLB.cpp  AGLTFMia.cpp  AGLTFMiaDLB.cpp  AGLTFMiaLB.cpp  AGLTFMonsterLB.cpp  AGLTFPipe.cpp  AGLTFPipeDLB.cpp  AGLTFPipeLB.cpp  AGLTFSimple.cpp  AGLTFSkin.cpp  AGLTFSkin_Compare.cpp  AGLTFThread.cpp  AGLTFThreadDLB.cpp  AGLTFThreadLB.cpp  AGLTFThread_Shader.cpp  ASkeletonDrawer.cpp  ASkeletonDrawer.h  ASkeletonTest.cpp  CMakeLists.txt  GLTFPrimitive.cpp  GLTFPrimitive.h
libsrc/agl/: camera.cpp  mesh.h
libsrc/atk/: transform.cpp
libsrc/atkmath/: matrix3-basecode.cpp  quaternion-basecode.cpp
libsrc/atkui/: framework.cpp
models/: cylinder.glb  glove.glb  hand1.glb  hand2.glb  hand3.glb  hand4.glb  hand_test.glb  pipe.glb  pipe1.glb  pipe3.glb  pipe4.glb  thread-v2.glb  thread.glb  thread_noroll.glb  two-cubes.gltf  two-shapes.gltf
models/Mia/: Mia-v2.0.glb  Sit To Stand.dae  Stand To Sit.dae
motions/: bent_thread.bvh  cylinder.bvh  hand.bvh  hand2.bvh  hand4.bvh  hand4_mv.bvh  hand_movements.bvh  pipe_1.bvh  thread-v2.bvh  thread.bvh  thread_bending_low.bvh  thread_noroll.bvh  thread_restpose.bvh
motions/14/: 14_35.bvh  14_37.bvh
motions/Mia/: hand_rotate.bvh  hand_rotate_noanim.bvh  leg_up.bvh  mia_candywrapper.bvh  mia_restpose.bvh  waving.bvh
motions/Warrok/: warrockCandyWrapper.bvh
skinning_project/: CMakeLists.txt  cylinder_test.cpp  dual_quat_blending.cpp  linear_blend_skinning.cpp  simple_dual.cpp  skin_test_mesh.cpp
